--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -22,6 +22,47 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Actors">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Actors
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DirectorPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> DirectorPage
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="FavoriteMovies">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> FavoriteMovies
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="LogIn">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> LogIn
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="MoviePage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> MoviePage
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Movies">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Movies
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SignUp">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> SignUp
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="UserProfile">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> UserProfile
+            </NavLink>
+        </li>
+        
     </ul>
 </div>
 
