--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -34,7 +34,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="FavoriteMovies">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> FavoriteMovies
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Favorite Movies
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -59,9 +59,30 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="UserProfile">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> UserProfile
+                <span class="oi oi-list-rich" aria-hidden="true"></span> User Profile
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Top200Actors">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Top 200 Actors
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Top200Directors">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Top 200 Directors
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Top200Movies">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Top 200 Movies
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AboutUs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> About Us
+            </NavLink>
+        </li>
+        
         
     </ul>
 </div>
