Menu og footer lavet i ny branch

--- a/MovieBioApp/Shared/NavMenu.razor
+++ b/MovieBioApp/Shared/NavMenu.razor
@@ -1,100 +1,64 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">MovieBioApp</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm backGroundColorNavBar border-bottom box-shadow mb-3">
+    <div class="container">
+        <a class="navbar-brand" href=""><img class="logoIcon" src="Icons/MovieIcon.png"></a>
+        <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+             <ul class="navbar-nav searchBar">
+                 <div class="dropdown">
+                   <div class="btn profileButton" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     <img class="profileIcon" alt="user" src="Icons/HumanIcon.png">
+                   </div>
+                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                       <a class="dropdown-item" href="UserProfile">My Profile</a>
+                       <a class="dropdown-item" href="FavoriteMovies">My Favorites</a>
+                       @*<div class="dropdown-divider"></div>
+                       <a class="dropdown-item" href="Settings">Settings</a>*@
+                   </div>
+                 </div>
+             </ul>
+            <ul class="navbar-nav flex-grow-1 searchBar">
+                <div class="dropdown">
+                    <div class="btn profileButton WhiteText" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Menu<img class="profileIcon menuIcon" alt="user" src="Icons/MenuIcon.png">
+                    </div>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="">Main Page</a>
+                        <a class="dropdown-item" href="Top200Movies">Top 200 Movies</a>
+                        <a class="dropdown-item" href="Top200Actors">Top 200 Actors</a>
+                        <a class="dropdown-item" href="Top200Directors">Top 200 Directors</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="">Surprise Me</a>
+                    </div>
+                </div>
+                <li class="nav-item navSearchItem">
+                    <form id="form">
+                        <input type="search" id="query" name="q" placeholder="Search...">
+                        <button>Filter</button>
+                    </form>
+                </li>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Actors">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Actors
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="DirectorPage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> DirectorPage
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="FavoriteMovies">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Favorite Movies
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="LogIn">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> LogIn
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="MoviePage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> MoviePage
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Movies">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Movies
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="SignUp">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> SignUp
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="UserProfile">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> User Profile
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Top200Actors">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Top 200 Actors
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Top200Directors">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Top 200 Directors
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Top200Movies">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Top 200 Movies
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="AboutUs">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> About Us
-            </NavLink>
-        </li>
-        
-        
-    </ul>
-</div>
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
 
 @code {
-    private bool collapseNavMenu = true;
+    bool collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    string baseMenuClass = "navbar-collapse d-sm-inline-flex flex-sm-row-reverse";
 
-    private void ToggleNavMenu()
+    string NavMenuCssClass => baseMenuClass + (collapseNavMenu ? " collapse" : "");
+
+    void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+   
 
 }
