--- a/MovieBioApp/Shared/NavMenu.razor.css
+++ b/MovieBioApp/Shared/NavMenu.razor.css
@@ -11,25 +11,52 @@
     font-size: 1.1rem;
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
+.profileButton {
+    border: none;
+}
+
+.navSearchItem{
+    margin-left: 10rem;
+}
+
+form{
+    width: 25rem;
+    padding-right: 2rem;
+    position: relative;
+}
+
+input#query{
+    width: 100%;
+    border-radius: 0.5rem;
+    position: relative;
+}
+
+button{
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    right: 0;
+    position: absolute;
+}
+
+.backGroundColorNavBar{
+    background-color: #262324;
+}
+
+.searchBar{
+    align-items: center;
+}
+.WhiteText{
+    color: white !important;
+}
+
+.menuIcon{
+    margin-left: 0.5rem;
 }
 
 .nav-item {
     font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+    
 }
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
 
     .nav-item ::deep a {
         color: #d7d7d7;
