--- a/MovieBioApp/wwwroot/css/site.css
+++ b/MovieBioApp/wwwroot/css/site.css
@@ -55,11 +55,27 @@ button.accept-policy {
     top: 0.5rem;}
 
 .footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     background-color: #262324;
     color: white;
+    height: 10.5rem;
+}
+
+.rowStyle{
+    background-color: #262324;
+    color: white;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+
+.rowBorder{
+    border: 1px solid black;
+}
+
+.paddingRemove{
+    padding: 0;
 }
 
 .col-sm p{
