--- a/MovieBioApp/Pages/MoviePage.razor
+++ b/MovieBioApp/Pages/MoviePage.razor
@@ -1,6 +1,215 @@
 ﻿@page "/MoviePage"
-<h3>MoviePage</h3>
+@using MovieBioApp.Data.MovieService
+@using MovieBioApp.Data.OMDbAPI
+@using MovieBioApp.Models
+
+@inject IMovieService MovieService;
+@inject IOMDbAPIService OmDbApiService;
+
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>MovieBioApp</title>
+    <base href="~/"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+    <link href="css/site.css" rel="stylesheet"/>
+    <link href="MovieBioApp.styles.css" rel="stylesheet"/>
+    <link href="css/starSystem.css" rel="stylesheet">
+</head>
+<body>
+<div class="container">
+
+    @if (_movie == null)
+    {
+        <p>
+            <em>Loading...</em>
+        </p>
+    }
+    else
+    {
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <h3>
+                        <strong>@_movie.MovieTitle</strong>
+                    </h3>
+                    <img src="@_omDbApiObj.image" alt="No image for this movie">
+
+                </div>
+                <div class="col-sm-8">
+
+                    <h3>
+                        <strong>Description</strong>
+                    </h3>
+                    <p>@_omDbApiObj.description</p>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3>
+                        <strong>Genre</strong>
+                    </h3>
+
+                    <ul>
+                        @foreach (string genre in _omDbGenre)
+                        {
+                            <li>@genre</li>
+                        }
+                    </ul>
+                    <h3>
+                        <strong>Rating</strong>
+                    </h3>
+                    @if (_movie.Rating == 0)
+                    {
+                        if (string.IsNullOrEmpty(_omDbApiObj.ratingValue))
+                        {
+                            <p>No rating for this movie yet</p>
+                        }
+                        else
+                        {
+                            <p>@_omDbApiObj.ratingValue / 10</p>
+                        }
+                    }
+                    else
+                    {
+                        <p>@_movie.Rating / 10</p>
+                    }
+
+                    <h3>
+                        <strong>Rating based on actors</strong>
+                    </h3>
+                    <p>@_movie.RatingBasedOnActors / 10</p>
+
+
+                    <h3>
+                        <strong>Directors</strong>
+                    </h3>
+                    @if (_movie.Director == null)
+                    {
+                        <ul>
+                            @foreach (string director in _omDbDirectors)
+                            {
+                                <li>@director</li>
+                            }
+                        </ul>
+                    }
+                    else
+                    {
+                        <ul>
+                            @foreach (string director in _movie.Director)
+                            {
+                                <li>@director</li>
+                            }
+                        </ul>
+                    }
+                    <h3>
+                        <strong>Stars</strong>
+                    </h3>
+                    <ul>
+                        @foreach (string actor in _omDbActors)
+                        {
+                            <li>@actor</li>
+                        }
+                    </ul>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3>
+                        <strong>Reviews</strong>
+
+                        @foreach (MovieReview review in _movie.Reviews)
+                        {
+                            <p>
+                                <strong>@review.ReviewUsername</strong>
+                            </p>
+                            <p>@review.ReviewDescription</p>
+                            <p>@review.ReviewRating</p>
+                        }
+                    </h3>
+
+
+                </div>
+
+                <div class="col-sm-6">
+                    <h3>
+                        <strong>Write your review</strong>
+                    </h3>
+                    <div class="form-outline">
+                        <textarea class="form-control" id="@_reviewTextfield" rows="4"></textarea>
+                        <select>
+                            <option value=”@_reviewRating”>1</option>
+                            <option value=”@_reviewRating”>2</option>
+                            <option value=”@_reviewRating”>3</option>
+                            <option value=”@_reviewRating”>4</option>
+                            <option value=”@_reviewRating”>5</option>
+                            <option value=”@_reviewRating”>6</option>
+                            <option value=”@_reviewRating”>7</option>
+                            <option value=”@_reviewRating”>8</option>
+                            <option value=”@_reviewRating”>9</option>
+                            <option value=”@_reviewRating”>10</option>
+
+                        </select>
+                        <br>
+                        <button @onclick="(() => SaveReview())">Submit review</button>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+    }
+
+
+
+</div>
+</body>
+</html>
 
 @code {
-    
+    int _dummyMovieID = 13286420;
+    int _randomId = RandomMovieID();
+    string _reviewTextfield;
+    float _reviewRating;
+
+    Movie _movie;
+    OMDbAPIObj _omDbApiObj;
+    List<string> _omDbActors;
+    List<string> _omDbDirectors;
+    List<string> _omDbGenre;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _movie = await MovieService.GetMovieById(_dummyMovieID);
+        _omDbApiObj = await OmDbApiService.GetOMDbAPIMovie(_movie.MovieTitle, _movie.Year);
+
+        _omDbActors = _omDbApiObj.actors.Split(new char[] {','}).ToList();
+        _omDbDirectors = _omDbApiObj.directors.Split(new char[] {','}).ToList();
+        _omDbGenre = _omDbApiObj.genre.Split(new char[] {','}).ToList();
+    }
+
+    private static int RandomMovieID(){
+        int min = 15414;
+        int max = 13287388;
+
+        Random random = new Random();
+        int number = random.Next(min, max);
+        return number;
+    }
+
+    private void SaveReview()
+    {
+        if (_reviewRating == null || string.IsNullOrEmpty(_reviewTextfield))
+        {
+            Console.WriteLine("Should display error to user");
+        }
+    }
+
 }
